--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <h1 class="title">Tharushi Sewwandi</h1>
             <p class="section__text__p2">Web Designer</p>
             <div class="btn-container">
-                <button
+                <!-- <button
                  class="btn btn-color-2"
                  onclick="window.open('./assets/TharushiCV.pdf')">
                  Download CV
-               </button>
+               </button> -->
                <button
                 class="btn btn-color-1"
                 onclick="location.href='./#contact'">
